--- a/Weather Dashboard UI Design/flutter_weather_dashboard/pubspec.yaml
+++ b/Weather Dashboard UI Design/flutter_weather_dashboard/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   geolocator: ^12.0.0
   intl: ^0.19.0
   flutter_dotenv: ^5.1.0
+  firebase_auth: ^6.1.1
+  firebase_core: ^4.2.0
+  firebase_messaging: ^16.0.3
 
 dev_dependencies:
   flutter_test:
