fix initialization error

--- a/flutter_weather_dashboard/.env.example
+++ b/flutter_weather_dashboard/.env.example
@@ -1,3 +1,2 @@
-# Copy this file to .env and fill your keys
-OPENWEATHER_API_KEY=
-AQICN_API_KEY=
+OPENWEATHER_API_KEY=2aba6509f642aef657cea68a15d5647e
+AQICN_API_KEY=5d3de55f0a4752e96ecd9623386803d6f16ff7b6
