--- a/flutter_weather_dashboard/pubspec.yaml
+++ b/flutter_weather_dashboard/pubspec.yaml
@@ -13,17 +13,20 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-  geolocator: ^12.0.0
-  intl: ^0.19.0
-  flutter_dotenv: ^5.1.0
+  geolocator: ^14.0.2
+  intl: ^0.20.2
+  fl_chart: ^0.65.0
+  flutter_dotenv: ^6.0.0
+  # 🔥 Firebase packages
+  firebase_core: 4.2.1
   firebase_auth: ^6.1.1
-  firebase_core: ^4.2.0
+  firebase_database: ^12.0.4
   firebase_messaging: ^16.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
