--- a/flutter_weather_dashboard/pubspec.yaml
+++ b/flutter_weather_dashboard/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_auth: ^6.1.1
   firebase_database: ^12.0.4
   firebase_messaging: ^16.0.3
+  cloud_firestore: 6.1.0
 
 dev_dependencies:
   flutter_test:
