--- a/flutter_weather_dashboard/pubspec.yaml
+++ b/flutter_weather_dashboard/pubspec.yaml
@@ -28,6 +28,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_local_notifications: ^18.0.0
+  shared_preferences: ^2.3.0
 
 flutter:
   uses-material-design: true
